--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 
 title: The C++ Alliance
-email: info@cppalliance.com
+email: info@cppalliance.org
 url: http://cppalliance.org # the base hostname & protocol for your site, e.g. http://example.com
 # baseurl: /subpath # the subpath of your site, e.g. /blog
 description: >- # this means to ignore newlines until "baseurl:"
