Add prism.js, copy to clipboard, line-number, code-wrap
- Custom style
- Fix bg color on non-cpp code-block

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ kramdown:
   input: GFM
   auto_ids: true
   hard_wrap: false
-  syntax_highlighter: rouge
+  syntax_highlighter: none
+  # syntax_highlighter: rouge
 
 theme: minima
 plugins:
