--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,14 @@ plugins:
   - jekyll-sitemap
   - jekyll-email-protect
   - jekyll-seo-tag
+  - jekyll-paginate
+
+feed:
+  posts_limit: 15
+
+# Pagination settings
+paginate: 5
+paginate_path: "/news/page:num/"
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
