--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,10 @@ feed:
 paginate: 5
 paginate_path: "/news/page:num/"
 
+# Twitter Card Setting
+title_image: "https://cppalliance.org/images/logo.png"
+logo: "/images/logo.png"
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
